# kernelguard

./: .gitignore  LICENSE  README.md  detect_hacks.py  e2e-live-smoke-2.txt  e2e-live-smoke-3.txt  e2e-live-smoke.txt  kernelguard.py  kernelguard.py.bak  kernelguard_api.py  kernelguard_mcp.py  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: blue-pr-prechecks.yml  blue-pr-sync.yml  trusted-blue-eval.yml
scripts/github/: blue_pr_gate.py  blue_pr_static_security.py  claim_blue_evaluation.py  common.py  complete_blue_evaluation.py  evaluate_blue_pr.py  fetch_blue_evaluation_claim.py  post_blue_evaluation_comment.py  sync_blue_pr_submission.py  write_blue_public_summary.py
